// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeTreeRepo createValue Should create a new advanced tree value 1`] = `
"
                    INSERT @value0
                        IN @@value1
                    RETURN NEW"
`;

exports[`AttributeTreeRepo createValue Should create a new advanced tree value 2`] = `
{
  "@value1": "core_edge_values_links",
  "value0": {
    "_from": "test_lib/12345",
    "_to": "core_nodes_test_tree/categories/123456",
    "attribute": "test_tree_attr",
    "created_at": 400999999,
    "created_by": "0",
    "metadata": {
      "my_attribute": "metadata value",
    },
    "modified_at": 400999999,
    "modified_by": "0",
    "version": {
      "my_tree": "1",
    },
  },
}
`;

exports[`AttributeTreeRepo deleteValue Should delete a value 1`] = `
"
                    REMOVE @value0 IN @@value1
                    RETURN OLD"
`;

exports[`AttributeTreeRepo deleteValue Should delete a value 2`] = `
{
  "@value1": "core_edge_values_links",
  "value0": {
    "_key": "445566",
  },
}
`;

exports[`AttributeTreeRepo filterQueryPart Should return tree filter 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "core_edge_values_links",
    "value1": "label",
    "value2": null,
  },
  "query": "FILTER FIRST( 
                FOR rv, re IN 1 OUTBOUND r._id
                    @@value0
                    FILTER re.attribute == @value1
                    LET rRecord = DOCUMENT(
                        rv.libraryId,
                        rv.recordId
                    )
                 @value2 RETURN rRecord ) != null",
}
`;

exports[`AttributeTreeRepo getValueByID Should return value 1`] = `
"
                FOR linkedNode, edge
                    IN 1 OUTBOUND @value0
                    @@value1
                    FILTER edge._key == @value2
                    FILTER edge.attribute == @value3
                    LIMIT 1
                    RETURN {linkedNode, edge}
            "
`;

exports[`AttributeTreeRepo getValueByID Should return value 2`] = `
{
  "@value1": "core_edge_values_links",
  "value0": "test_lib/987654",
  "value2": "112233",
  "value3": "test_tree_attr",
}
`;

exports[`AttributeTreeRepo getValues Should return all values if forced 1`] = `
"FOR vertex, edge IN 1 OUTBOUND @value0
                    @@value1, @@value2
                    LET record = DOCUMENT(
                        vertex.libraryId,
                        vertex.recordId
                    )
                    FILTER edge.attribute == @value3
                 
                
                RETURN {id: vertex._key, record, edge}
            "
`;

exports[`AttributeTreeRepo getValues Should return linked tree element 1`] = `
"FOR vertex, edge IN 1 OUTBOUND @value0
                    @@value1, @@value2
                    LET record = DOCUMENT(
                        vertex.libraryId,
                        vertex.recordId
                    )
                    FILTER edge.attribute == @value3
                 
                
                RETURN {id: vertex._key, record, edge}
            "
`;

exports[`AttributeTreeRepo getValues Should return linked tree element 2`] = `
{
  "@value1": "core_edge_values_links",
  "@value2": "core_edge_tree_test_tree",
  "value0": "test_lib/123456",
  "value3": "test_tree_attr",
}
`;

exports[`AttributeTreeRepo getValues Should return linked tree element filtered by version 1`] = `
"FOR vertex, edge IN 1 OUTBOUND @value0
                    @@value1, @@value2
                    LET record = DOCUMENT(
                        vertex.libraryId,
                        vertex.recordId
                    )
                    FILTER edge.attribute == @value3
                 FILTER edge.version == @value4 
                LIMIT 1
                RETURN {id: vertex._key, record, edge}
            "
`;

exports[`AttributeTreeRepo sortQueryPart Should return tree filter 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "core_edge_values_links",
    "@value1": "core_edge_tree_undefined",
    "value2": "label",
    "value3": "linked",
    "value4": "ASC",
  },
  "query": "SORT FIRST(
                FOR v, e IN 1 OUTBOUND r._id
                @@value0, @@value1
                FILTER e.attribute == @value2
                LET record = DOCUMENT(
                    v.libraryId,
                    v.recordId
                )
                RETURN record.@value3
            ) @value4",
}
`;

exports[`AttributeTreeRepo updateValue Should update a advanced link value 1`] = `
"
                    UPDATE @value0
                        WITH @value1
                        IN @@value2
                    RETURN NEW"
`;

exports[`AttributeTreeRepo updateValue Should update a advanced link value 2`] = `
{
  "@value2": "core_edge_values_links",
  "value0": {
    "_key": "987654",
  },
  "value1": {
    "_from": "test_lib/12345",
    "_to": "core_nodes_test_tree/categories/123456",
    "attribute": "test_tree_attr",
    "created_by": undefined,
    "metadata": {
      "my_attribute": "metadata value",
    },
    "modified_at": 400999999,
    "modified_by": "0",
    "version": {
      "my_tree": "1",
    },
  },
}
`;
